app-image-example/ingress/grafana-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  #type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http3000
      #nodePort: 30007
  selector:
    app: grafana
    #prometheus: k8s
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: grafana.example.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grafana
            port:
              number: 3000
