app-image-example/ingress/prometheus-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
spec:
  #type: NodePort
  ports:
    - port: 9092
      targetPort: 9090
      protocol: TCP
      name: http9092
      #nodePort: 30007
  selector:
    app: prometheus
    #prometheus: k8s
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: prometheus.example.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prometheus
            port:
              number: 9092
